--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
   <script>
     const myGoldGrams = 438.44;
     const fundUnits = 4524;
+    const avgayarPrice = 189469;
+    const avgGoldPrice = ((127 * 2312000) + (40 * 3810000) + (111.440 * 4725000) + (60 * 8110000) + (100 * 6850000)) / myGoldGrams;
     const btcAmount = 0.0426721;
     const ethAmount = 0.3754664;
     const filAmount = 8.2325135;
@@ -153,6 +155,10 @@
           document.getElementById("portfolio-title").innerText = `دارایی طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
 
+          document.querySelector("#portfolio-value").insertAdjacentHTML("afterend", `
+             میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice.toLocaleString(undefined, { minimumFractionDigits: 0, maximumFractionDigits: 0 }))}
+          `);
+
           const profitBox = document.getElementById("profit-box");
           profitBox.className = "bg-blue-800 rounded-xl shadow-md p-6 text-center";
 
@@ -183,7 +189,12 @@
                 <div class="text-2xl font-extrabold drop-shadow text-white mt-2">
                   ${toPersianNumber(Math.floor(result).toLocaleString())}
                 </div>
-              `);
+                document.querySelector("#profit-box").insertAdjacentHTML("beforeend", `
+                  <div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">
+                       قیمت سر به سر: ${toPersianNumber(avgayarPrice.toLocaleString())}
+                  </div>
+               `);
+            `);
             } else {
               animateElement("profit-box", "صندوق عیار یافت نشد");
             }
