--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
       </div>
     </section>
 
-    <section class="bg-purple-800 rounded-xl shadow-md p-2 text-center">
+    <section class="bg-purple-800 rounded-xl shadow-md p-2 text-center persian-numbers">
       <h3 id="portfolio-title" class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">دارایی طلای آبشده</h3>
       <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
     </section>
 
-    <section id="profit-box" class="rounded-xl p-2 text-center text-yellow-400 persian-numbers">
+    <section id="profit-box" class="bg-blue-800 rounded-xl shadow-md p-2 text-center text-yellow-400 persian-numbers">
       در حال محاسبه سود/زیان...
     </section>
 
