--- a/index.html
+++ b/index.html
@@ -139,13 +139,14 @@
 
           const goldPrice = gold18.price;
           const totalGoldValue = (goldPrice - 30000) * myGoldGrams;
-          const Goldpr = ((gold18.price - avgGoldPrice) / avgGoldPrice) / 100;
+          const Goldpr = ((gold18.price - avgGoldPrice) / avgGoldPrice) * 100;
 
           document.getElementById("portfolio-title").innerText = `دارایی طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
           document.querySelector("#portfolio-value").insertAdjacentHTML(
-            "afterend",
-            `میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice.toFixed(0).toLocaleString())} (${toPersianNumber(Goldpr)}٪)`
+             "afterend",
+             `میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice.toFixed(0).toLocaleString())} 
+             (<span style="color: yellow-300;">${toPersianNumber(Goldpr.toFixed(2).toLocaleString())}٪</span>)`
           );
           const urls = [
             "https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz&type=1",
