--- a/index.html
+++ b/index.html
@@ -144,10 +144,11 @@
           document.getElementById("portfolio-title").innerText = `دارایی طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
           document.querySelector("#portfolio-value").insertAdjacentHTML(
-             "afterend",
-             `میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice.toFixed(0).toLocaleString())} 
-             (<span style="text-yellow-300;">${toPersianNumber(Goldpr.toLocaleString().toFixed(2))}٪</span>)`
+            "afterend",
+            `میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice.toLocaleString())} 
+            (<span class="text-yellow-300">${toPersianNumber(Goldpr.toFixed(2).toLocaleString())}٪</span>)`
           );
+
           const urls = [
             "https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz&type=1",
             "https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreezhPfvWeEOGOPucTWsPukkDazGzTQ&type=1"
