--- a/index.html
+++ b/index.html
@@ -144,9 +144,11 @@
           document.getElementById("portfolio-title").innerText = `دارایی طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
           document.querySelector("#portfolio-value").insertAdjacentHTML(
-            "afterend",
-            `میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice.toLocaleString())} 
-            (<span class="text-yellow-300">${toPersianNumber(Goldpr.toFixed(2).toLocaleString())}٪</span>)`
+              "afterend",
+              `<span style="color:yellow-300">
+              میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice.toLocaleString())} 
+             (${toPersianNumber(Goldpr.toFixed(0).toLocaleString())}٪)
+             </span>`
           );
 
           const urls = [
