--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           document.querySelector("#portfolio-value").insertAdjacentHTML(
             "afterend",
             `<span class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">
-                میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice.toFixed(0).toLocaleString())} 
+                میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice.toLocaleString())} 
                (${toPersianNumber(Goldpr.toFixed(2).toLocaleString())}٪)
             </span>`
           );
