--- a/index.html
+++ b/index.html
@@ -167,15 +167,21 @@
               const result = fundUnits * (ayar.pc / 10);
               const combined = totalGoldValue + result + totalIrt;
               const color = ayar.pcp > 0 ? 'green' : ayar.pcp < 0 ? 'red' : 'black';
-
+              const ayarpr = ((ayar.pc - avgayarPrice) / avgayarPrice) * 100;
               animateElement("fund-price-box", `<span style="color:${color}">صندوق عیار: ${toPersianNumber(ayar.pc.toLocaleString())} (${toPersianNumber(Math.abs(ayar.pcc))} | ${toPersianNumber(Math.abs(ayar.pcp.toFixed(2)))}%)</span>`);
               animateElement("gold-amount", toPersianNumber(Math.floor(combined).toLocaleString()));
 
               animateElement("profit-box", `
                 <div class="text-xl font-extrabold drop-shadow text-yellow-300">دارایی صندوق عیار (${toPersianNumber(fundUnits.toLocaleString())} واحد)</div>
                 <div class="text-2xl font-extrabold drop-shadow text-white mt-2">${toPersianNumber(Math.floor(result).toLocaleString())}</div>
-                <div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">قیمت سر به سر: ${toPersianNumber(avgayarPrice.toLocaleString())}</div>
-              `);
+                document.querySelector("#portfolio-value").insertAdjacentHTML(
+                    "afterend",
+                    `<div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">
+                          قیمت سر به سر: ${toPersianNumber(Math.floor(avgayarPrice).toLocaleString())} 
+                         (${toPersianNumber(ayarpr.toFixed(2).toLocaleString())}٪)
+                    </div>`
+               );
+            `);
             } else {
               animateElement("profit-box", "صندوق عیار یافت نشد");
             }
