--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                           <div class="text-2xl font-extrabold drop-shadow text-white mt-2">${toPersianNumber(Math.floor(result).toLocaleString())}</div>
                     `);
 
-                    document.querySelector("#portfolio-value").insertAdjacentHTML(
+                    document.querySelector("#profit-box").insertAdjacentHTML(
                       "afterend",
                       `<div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">
                            قیمت سر به سر: ${toPersianNumber(Math.floor(avgayarPrice).toLocaleString())} 
