--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     `);
 
                     document.querySelector("#profit-box").insertAdjacentHTML(
-                      "afterend",
+                      "beforeend",
                       `<div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">
                            قیمت سر به سر: ${toPersianNumber(Math.floor(avgayarPrice).toLocaleString())} 
                            (${toPersianNumber(Number(ayarpr.toFixed(2)).toLocaleString())}٪)
