--- a/index.html
+++ b/index.html
@@ -177,12 +177,16 @@
                           <div class="text-2xl font-extrabold drop-shadow text-white mt-2">${toPersianNumber(Math.floor(result).toLocaleString())}</div>
                     `);
 
+                    const ayarprText = ayarpr < 0
+                        ? `-${toPersianNumber(Math.abs(ayarpr).toFixed(2))}`
+                        : toPersianNumber(ayarpr.toFixed(2));
+
                     document.querySelector("#profit-box").insertAdjacentHTML(
-                      "beforeend",
-                      `<div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">
-                           قیمت سر به سر: ${toPersianNumber(Math.floor(avgayarPrice).toLocaleString())} 
-                           (${toPersianNumber(Number(ayarpr.toFixed(2)).toLocaleString())}٪)
-                      </div>`
+                       "afterend",
+                       `<div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">
+                            قیمت سر به سر: ${toPersianNumber(Math.floor(avgayarPrice).toLocaleString())} 
+                            (${ayarprText}٪)
+                       </div>`
                     );
 
              } else {
