--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
           document.getElementById("portfolio-title").innerText = `دارایی طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
 
-          const ayarprText = ayarpr < 0
-                 ? `${toPersianNumber(Math.abs(ayarpr).toFixed(2))}-`
-                 : toPersianNumber(ayarpr.toFixed(2));
+          const ayarprText = Goldpr < 0
+                 ? `${toPersianNumber(Math.abs(Goldpr).toFixed(2))}-`
+                 : toPersianNumber(Goldpr.toFixed(2));
 
           document.querySelector("#portfolio-value").insertAdjacentHTML(
               "afterend",
