--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           document.getElementById("portfolio-title").innerText = `دارایی طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
 
-          const ayarprText = Goldpr < 0
+          const goldprText = Goldpr < 0
                  ? `${toPersianNumber(Math.abs(Goldpr).toFixed(2))}-`
                  : toPersianNumber(Goldpr.toFixed(2));
 
@@ -152,7 +152,7 @@
               "afterend",
               `<div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">
                      میانگین قیمت خرید: ${toPersianNumber(Math.floor(avgGoldPrice).toLocaleString())} 
-                     (${Goldpr}٪)
+                     (${goldprText}٪)
               </div>`
           );
           
