--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body class="bg-yellow-500 text-gray-800">
   <main class="max-w-xl mx-auto p-2 space-y-4">
     <section class="bg-red-700 rounded-xl shadow-md p-3 text-center text-white cursor-pointer hover:bg-green-700 transition" onclick="fetchData()">
-        <span class="text-lg font-bold">🔄 بروزرسانی اطلاعات</span>
+        <span class="text-lg font-bold">بروزرسانی اطلاعات 🔄</span>
     </section>
     <section class="bg-white rounded-xl shadow-md p-3 text-center">
       <div class="text-base font-bold space-y-1 persian-numbers">
